fixed spacing of header links'

--- a/themes/hugo-theme-nightfall/assets/sass/components/_header.scss
+++ b/themes/hugo-theme-nightfall/assets/sass/components/_header.scss
@@ -22,11 +22,11 @@
 .headerLinks {
   ul {
     list-style: none;
-    padding: 7px;
-    margin: 0;
+    padding: 3px;
+    margin: 0px;
     li {
       display: inline;
-      margin: 0px;
+      margin: 2px;
       a {
         color: $white;
         text-decoration: none;
@@ -38,6 +38,8 @@
 .terminal {
   color: $white;
   text-decoration: none;
+  float: left;
+  padding: 20px;
 }
 
 .hamb {
@@ -91,7 +93,7 @@
   top: 0;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: $breakLarge) {
   .headerLinks {
     width: 100%;
     height: 100%;
