--- a/themes/hugo-theme-nightfall/assets/sass/utils/_variables.scss
+++ b/themes/hugo-theme-nightfall/assets/sass/utils/_variables.scss
@@ -13,5 +13,5 @@ $fontParagraph: 'Open Sans', sans-serif;
 $fontCode: 'Fira Mono', monospace;
 
 // Content
-$breakLarge: 700px;
-$width: 760px;
+$breakLarge: 900px;
+$width: 800px;
